--- a/.github/workflows/automerge.yaml
+++ b/.github/workflows/automerge.yaml
@@ -59,7 +59,7 @@ jobs:
             -t "$TARGET_BRANCH" \
             -s "$SRC_REPO_URL" \
             -b "$SECOND_REPO_URL" \
-            -m "$MAILTO" ${DONT_RESOLVE} ${DONT_UPDATE} ${VERBOSE}""
+            -m "$MAILTO" ${DONT_RESOLVE} ${DONT_UPDATE} ${VERBOSE}"
         env:
           SRC_REPO_URL: ${{ env.SRC_REPO_URL }}
           SECOND_REPO_URL: ${{ env.SECOND_REPO_URL }}
