--- a/.github/workflows/trigger-automerge.yml
+++ b/.github/workflows/trigger-automerge.yml
@@ -1,4 +1,3 @@
-# .github/workflows/trigger-automerge.yml in devops-utils
 name: Trigger Automerge
 
 on:
@@ -16,10 +15,11 @@ jobs:
             -d '{
               "event_type": "automate_merge",
               "client_payload": {
-                "source_repo": "zero-devops-utils",  # Replace with the actual repository name
-                "source_branch": "test1",  # The branch to merge from
-                "target_branch": "main",    # The branch to merge into
-                "verbose": "false"         # Optional verbose flag
+                "source_repo": "anunaidu/test1",  # Full repository name
+                "source_branch": "rel1",            # The branch to merge from
+                "target_branch": "dev",              # The branch to merge into
+                "verbose": "false"                   # Optional verbose flag
               }
             }' \
             https://api.github.com/repos/anunaidu/sample-repository/dispatches
+
