--- a/.github/workflows/trigger-automerge.yml
+++ b/.github/workflows/trigger-automerge.yml
@@ -3,36 +3,38 @@ name: Trigger Automerge
 on:
   push:
     branches:
-      - test1 # Triggers the workflow when changes are pushed to test1
-
+      - test1 
+  
 jobs:
   trigger:
     runs-on: ubuntu-latest
     steps:
-      - name: Debug JSON Payload
-        run: |
-          echo '{
+    - name: Debug JSON Payload
+      run: |
+        echo '{
+          "event_type": "automate_merge",
+          "client_payload": {
+            "source_repo": "anunaidu/zero-devops-utils",
+            "source_branch": "test1",
+            "target_branch": "main",
+            "verbose": "false"
+          }
+        }'
+
+    - name: Trigger Automerge using PAT
+      run: |
+        curl -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: token ${{ secrets.PAT_TOKEN }}" \
+          -d '{
             "event_type": "automate_merge",
             "client_payload": {
-              "source_repo": "anunaidu/zero-devops-utils",
-              "source_branch": "test1",
-              "target_branch": "main",
-              "verbose": "false"
+              "source_repo": "anunaidu/zero-devops-utils",  # Full repository name
+              "source_branch": "test1",                     # The branch to merge from
+              "target_branch": "main",                      # The branch to merge into
+              "verbose": "false"                            # Optional verbose flag
             }
-          }'
+          }' \
+          https://api.github.com/repos/anunaidu/sample-repository/dispatches
 
-      - name: Trigger Automerge
-        run: |
-          curl -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
-            -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
-            -d '{
-              "event_type": "automate_merge",
-              "client_payload": {
-                "source_repo": "anunaidu/zero-devops-utils",
-                "source_branch": "test1",
-                "target_branch": "main",
-                "verbose": "false"
-              }
-            }' \
-            https://api.github.com/repos/anunaidu/sample-repository/dispatches
+
