--- a/.github/workflows/trigger-automerge.yml
+++ b/.github/workflows/trigger-automerge.yml
@@ -9,12 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-      workflows: write
-
     steps:
-      - name: Trigger Automerge
+      - name: Debug Dispatch Response
         run: |
-          curl -X POST \
+          RESPONSE=$(curl -s -o /dev/null -w "%{http_code}" -X POST \
             -H "Accept: application/vnd.github.v3+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
             -d '{
@@ -26,7 +24,5 @@ jobs:
                 "verbose": "false"
               }
             }' \
-            https://api.github.com/repos/anunaidu/sample-repository/dispatches
-
-
-
+            https://api.github.com/repos/anunaidu/sample-repository/dispatches)
+          echo "Response Code: $RESPONSE"
