--- a/.github/workflows/trigger-automerge.yml
+++ b/.github/workflows/trigger-automerge.yml
@@ -26,3 +26,4 @@ jobs:
             }' \
             https://api.github.com/repos/anunaidu/sample-repository/dispatches)
           echo "Response Code: $RESPONSE"
+          echo "Response Code: $RESPONSE"
