--- a/.github/workflows/trigger-automerge.yml
+++ b/.github/workflows/trigger-automerge.yml
@@ -3,26 +3,34 @@ name: Trigger Automerge
 on:
   push:
     branches:
-      - test1  # You can specify branches here if needed
-  repository_dispatch:
-    types: [automate_merge]
+      - test1
+      - rel2
 
 jobs:
-  trigger:
+  trigger-automerge:
     runs-on: ubuntu-latest
+
     steps:
       - name: Trigger Automerge Workflow
         run: |
           curl -X POST \
-            -H "Accept: application/vnd.github.v3+json" \
+            -H "Accept: application/vnd.github.everest-preview+json" \
             -H "Authorization: token ${{ secrets.GITHUB_TOKEN }}" \
+            https://api.github.com/repos/anunaidu/sample-repository/dispatches \
             -d '{
-              "ref": "refs/heads/test1",
-              "inputs": {
-                "source_repo": "anunaidu/zero-devops-utils",
-                "source_branch": "test1",
-                "target_branch": "main",
-                "verbose": "false"
+              "event_type": "automerge-trigger",
+              "client_payload": {
+                "repo": "zero-devops-utils",
+                "branch_combinations": [
+                  {
+                    "source_branch": "test1",
+                    "target_branch": "main"
+                  },
+                  {
+                    "source_branch": "rel2",
+                    "target_branch": "main"
+                  }
+                ]
               }
-            }' \
-            https://api.github.com/repos/anunaidu/sample-repository/actions/workflows/automerge.yml/dispatches
+            }'
+
